--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,12 @@
 [metadata]
 name = pystandards
-version = <version number: 0.0.1>
+version = 0.0.1
 license = MIT
-description = A collection of functions to get data on technical standards
+description = Get data on technical standards
 long_description = file: README.rst
 author = Lorenz Brachtendorf
 author_email = lorenz.brachtendorf@gmx.de
 classifiers=
-   <classifier 1>
-   <classifier 2>
-   <...>
-   <classifier m>
 
 [options]
 packages = find:
@@ -19,8 +15,12 @@ package_dir =
 include_package_data = True
 install_requires =
    requests
-   BeautifulSoup
+   requests.exceptions
+   contextlib
+   bs4
    pandas
+   datetime
+   re
 
 [options.packages.find]
 where=pystandards
