--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = pystandards
 version = 0.0.1
 license = MIT
 description = Get data on technical standards
-long_description = file: README.rst
+long_description = file: README.md
 author = Lorenz Brachtendorf
 author_email = lorenz.brachtendorf@gmx.de
 classifiers=
@@ -15,12 +15,15 @@ package_dir =
 include_package_data = True
 install_requires =
    requests
-   requests.exceptions
    contextlib
+   urllib
    bs4
    pandas
    datetime
+   time
    re
+   os
+   selenium
 
 [options.packages.find]
 where=pystandards
