--- a/setup.cfg
+++ b/setup.cfg
@@ -9,15 +9,11 @@ author_email = lorenz.brachtendorf@gmx.de
 classifiers=
 
 [options]
-packages = find:
-package_dir =
-    =pystandards
+packages =
+   pystandards
 include_package_data = True
 install_requires =
    requests
    bs4
    pandas
    selenium
-
-[options.packages.find]
-where=pystandards
